--- a/more.html
+++ b/more.html
@@ -131,7 +131,7 @@
     </main>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😭</span>
     </div>
 
     <script
