--- a/settings.html
+++ b/settings.html
@@ -90,7 +90,7 @@
     </main>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is too big 😭</span>
     </div>
 
     <script
