--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
-        <span>110%</span>
+        <span>100%</span>
         <i class="fa-solid fa-battery-full fa-lg"></i>
-        <i class="fa-solid fa-bolt"></i>
+        <i class="fa-solid fa-bolt fa-xs"></i>
       </div>
     </div>
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to KokoaTalk</h1>
       <p class="welcome-header__text">
         If you have a Kokoa Account, log in with your email or phone number.
       </p>
@@ -31,6 +31,7 @@
       <input name="username" type="text" placeholder="Email or phone number" />
       <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
+      <input type="submit" value="Sign Up" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
