--- a/chattwo.html
+++ b/chattwo.html
@@ -13,7 +13,7 @@
         <i class="fa-sharp fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>12:04</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -25,15 +25,15 @@
     <header class="alt-header">
       <div class="alt-header__column">
         <a href="chats.html">
-          <i class="fa-solid fa-chevron-left fa-2x"></i>
+          <i class="fa-solid fa-chevron-left fa-xl"></i>
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Milk</h1>
+        <h1 class="alt-header__title">Mocha</h1>
       </div>
       <div class="alt-header__column">
-        <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span>
-        <span><i class="fa-solid fa-bars fa-2x"></i></span>
+        <span><i class="fa-solid fa-magnifying-glass fa-xl"></i></span>
+        <span><i class="fa-solid fa-bars fa-xl"></i></span>
       </div>
     </header>
 
@@ -42,21 +42,21 @@
 
       <div class="message-row">
         <img
-          src="https://m.saladmarket.co.kr/web/product/big/202212/71b857161be9475cf3b6f3c402aaec6e.jpg"
+          src="https://cdn.imweb.me/upload/S20210927e14f9f0cf71bc/2dcbbcd061f2a.png"
         />
         <div class="message-row__content">
-          <span class="message__author">Milk</span>
+          <span class="message__author">Mocha</span>
           <div class="message__info">
             <span class="message__bubble">Happy~♬</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">08:27</span>
           </div>
         </div>
       </div>
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Happy~♬</span>
-            <span class="message__time">21:30</span>
+            <span class="message__bubble">Happy~♪</span>
+            <span class="message__time">08:31</span>
           </div>
         </div>
       </div>
