--- a/find.html
+++ b/find.html
@@ -13,7 +13,7 @@
         <i class="fa-sharp fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>12:04</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -31,7 +31,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
@@ -81,7 +81,69 @@
       </div>
       <div class="recommended-friends">
         <h6 class="recommended-friends__title">Recommended Friends</h6>
-        <span>You have no recommended friends</span>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://i.namu.wiki/i/Mue4n-h6WGhvywCACieS_zOIkRwk7zZ5VhfI6zKFEZZ1TOTuQLHGKTooGiJI98QeuBZ7uRR7fV2ak38f8XIFtnoMmK5bM6KdfXKK-dVAU1hbMYB_EQUgxfKh0ehMIrgstHxy2H4XNcclB316clCUGw.webp"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Chiffon
+              </h4>
+              <h6
+                class="user-component__subtitle recommended-friends__subtitle"
+              >
+                HaHa!!
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://i.namu.wiki/i/_CCUYsNKShrcEHg_tzvQF3fAlSh3q1v1ZU8DuLiXG1QhgpLhAC11L2kBCZpRPZvUPMaulP0ZLAMTBVMu8xGTeCq5gsye0-l13etn_70rOsqbNJmdySMIyqyaeBUmP-O-cYJQUrfr5nTvIbDyub-UkQ.webp"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Espresso
+              </h4>
+              <h6
+                class="user-component__subtitle recommended-friends__subtitle"
+              >
+                🐶💙
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://i.namu.wiki/i/o6rL7cY221oPtaB2HRW9nn6n1uAkiyJ_B7VG2pUTRUNhrJ7D4ZW-A2ckmjbTysO8L8Pw-rB05-jhKuOl_Y5a9_T4xtQM7URunVNeCMYul6gPT6ZAGfwmoM8wKWI8KYVUHy0Vt29sqy8pFtArCJKB4Q.webp"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Porong
+              </h4>
+              <h6
+                class="user-component__subtitle recommended-friends__subtitle"
+              >
+                ☁️🪄
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+        </div>
       </div>
       <div class="open-chat">
         <div class="open-chat__header">
@@ -93,10 +155,10 @@
         <div class="open-post">
           <div class="open-post__column">
             <h5 class="open-post__title">#MIKU</h5>
-            <h6 class="open-post__hashtags">#hatsune#miku#bocaloid</h6>
+            <h6 class="open-post__hashtags">#hatsunemiku#bocaloid</h6>
             <div class="open-post__members">
               <img
-                src="https://m.saladmarket.co.kr/web/product/big/202105/6a89031bea579d487a2fd98cceb7cba9.jpg"
+                src="https://img2.tmon.kr/cdn4/deals/2023/03/20/18690071898/front_sub2_b27ea_prdlb.jpg"
               />
               <span class="open-post__member-count">999+ members</span>
               <div class="divider"></div>
@@ -107,6 +169,30 @@
             <div class="open-post__photo">
               <img
                 src="https://i.namu.wiki/i/MLnbZLTyKZvRwe5E02CoUn-78gxlx2u3Kex3Xaaz2hT2YsF7OQ-vyVkcggTUbpGiIi2tWUqZH4pvk_9TG5nfuw.webp"
+              />
+              <div class="open-post__heart-count">
+                <i class="fa-solid fa-heart fa-xs"></i><span>999+</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column open-post__jap">
+            <h5 class="open-post__title">#プロセカ</h5>
+            <h6 class="open-post__hashtags">#プロセカ#わんだほーい</h6>
+            <div class="open-post__members">
+              <img
+                src="https://mblogthumb-phinf.pstatic.net/MjAyMjA2MTJfNjMg/MDAxNjU1MDA1MzU3Mzc2.CVMHDlf7CavN-Mqb5NtdUV9_ptmG_VBkMNRvlKB10xcg.NZ8UZg5VLfhxp0TIkhv1SDcpJRKbRNEvYF-iz0WzskMg.PNG.ashley1433/%E3%80%8A_%EB%B3%B4%EC%A0%95_%E3%80%8B%EF%BC%BF20220611192145.png?type=w800"
+              />
+              <span class="open-post__member-count">939 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://mblogthumb-phinf.pstatic.net/MjAyMjA2MTJfMjg3/MDAxNjU1MDA1MzYwNDIz.LfrOCvvJnDEIUQuI14ATjBZHw0JPVS32aNLtI48H4Wkg.erxcvZ11SMMsclwoCnVBavoL0qO68TaX2vErBhT52Zsg.PNG.ashley1433/%E3%80%8A_%EB%B3%B4%EC%A0%95_%E3%80%8B%EF%BC%BF20220611192110.png?type=w800"
               />
               <div class="open-post__heart-count">
                 <i class="fa-solid fa-heart fa-xs"></i><span>999+</span>
