--- a/friends.html
+++ b/friends.html
@@ -13,7 +13,7 @@
         <i class="fa-sharp fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>12:04</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -31,7 +31,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
@@ -69,7 +69,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://m.saladmarket.co.kr/web/product/big/202105/6a89031bea579d487a2fd98cceb7cba9.jpg"
+            src="https://img2.tmon.kr/cdn4/deals/2023/03/20/18690071898/front_sub2_b27ea_prdlb.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -77,11 +77,38 @@
             <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <span>Happy💙</span>
+        </div>
       </div>
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
           <span>Channel</span>
+          <i class="fa-solid fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://play-lh.googleusercontent.com/cf3DwPLbS8Z55sDvUSTQ6PL1goPdm8KbZ81g4TEUAaeUh5LDhkzdjxKQ2RX6BGpv0x4"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>7</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Friends</span>
           <i class="fa-solid fa-chevron-up fa-xs"></i>
         </div>
         <div class="user-component">
@@ -96,10 +123,38 @@
               </h4>
             </div>
           </div>
+          <div class="user-component__column"></div>
+        </div>
+        <div class="user-component">
           <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            <img
+              src="https://cdn.imweb.me/upload/S20210927e14f9f0cf71bc/98274d1f5fa22.png"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Milk
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">♬</div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://cdn.imweb.me/upload/S20210927e14f9f0cf71bc/2dcbbcd061f2a.png"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Mocha
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div class="user-component__music">
+              <span>39みゅーじっく!... </span>
+              <i class="fa-solid fa-play fa-sm"></i>
             </div>
           </div>
         </div>
