--- a/more.html
+++ b/more.html
@@ -13,7 +13,7 @@
         <i class="fa-sharp fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>12:04</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -31,7 +31,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
@@ -65,7 +65,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://m.saladmarket.co.kr/web/product/big/202105/6a89031bea579d487a2fd98cceb7cba9.jpg"
+            src="https://img2.tmon.kr/cdn4/deals/2023/03/20/18690071898/front_sub2_b27ea_prdlb.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -102,9 +102,17 @@
           <i class="fa-solid fa-diagram-project"></i>
           <span>Account</span>
         </div>
-        <div class="icon-row__icon">
+        <div class="icon-row__icon icon-row__openchat">
           <i class="fa-regular fa-comments"></i>
           <span>Openchat</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-solid fa-gamepad"></i>
+          <span>Game</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-solid fa-gift"></i>
+          <span>Gift</span>
         </div>
       </div>
       <div class="more-suggestions">
@@ -116,15 +124,23 @@
                 src="https://play-lh.googleusercontent.com/XOlH747gvKC16WTStuogzaOi1nJP8PJGGag14aVvmURtoGCEa1hVnOjoH5VAjYo3GYU"
               />
             </div>
-            <span class="more-suggestions__icon-text">プロジェクトセカイ</span>
+            <span class="more-suggestions__icon-text">プロセカ</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
               <img
-                src="https://play-lh.googleusercontent.com/XOlH747gvKC16WTStuogzaOi1nJP8PJGGag14aVvmURtoGCEa1hVnOjoH5VAjYo3GYU"
+                src="https://play-lh.googleusercontent.com/9BR-JoJpv2M_cNuT66wXJcW8Gke0xw3pzdTgUFB33wKauUP1wglkWEmltoPIktGIWKc"
               />
             </div>
-            <span class="more-suggestions__icon-text">프로젝트 세카이</span>
+            <span class="more-suggestions__icon-text">バンドリ!</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <img
+                src="https://www.otakutest.kr/image/test/1645868757254_84745"
+              />
+            </div>
+            <span class="more-suggestions__icon-text">あんスタ!!</span>
           </div>
         </div>
       </div>
