--- a/chats.html
+++ b/chats.html
@@ -13,7 +13,7 @@
         <i class="fa-sharp fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>12:04</span>
       </div>
       <div class="status-bar__column">
         <span>100%</span>
@@ -31,7 +31,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="fa-solid fa-comment fa-2x"></i>
           </a>
         </li>
@@ -62,21 +62,42 @@
     </header>
 
     <main class="main-screen">
-      <a href="chat.html">
+      <a href="chatone.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://m.saladmarket.co.kr/web/product/big/202212/71b857161be9475cf3b6f3c402aaec6e.jpg"
+              src="https://cdn.imweb.me/upload/S20210927e14f9f0cf71bc/6f2c0f0c2874b.png"
               class="user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Milk</h4>
-              <h6 class="user-component__subtitle">Happy~♬</h6>
+              <h4 class="user-component__title">
+                Cappuccino <i class="fa-solid fa-thumbtack fa-xs"></i>
+              </h4>
+              <h6 class="user-component__subtitle jap">
+                ひび割れた鍵盤に溶ける ~♬
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
             <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+            <div class="badge">3</div>
+          </div>
+        </div>
+      </a>
+      <a href="chattwo.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://cdn.imweb.me/upload/S20210927e14f9f0cf71bc/2dcbbcd061f2a.png"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Mocha</h4>
+              <h6 class="user-component__subtitle">Happy~♪</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">08:31</span>
           </div>
         </div>
       </a>
